Added checkout to the lightbox. changed the next/last button i checkout. other minor changes.

--- a/src/layouts/checkout.fxml
+++ b/src/layouts/checkout.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
+<?import java.lang.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
@@ -100,8 +102,40 @@
          <bottom>
             <AnchorPane prefHeight="110.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                <children>
-                    <Button mnemonicParsing="false" onAction="#backButtonPressed" prefHeight="70.0" prefWidth="150.0" text="Tillbaka" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="50.0" />
-                    <Button fx:id="nextButton" mnemonicParsing="false" onAction="#nextButtonPressed" prefHeight="70.0" prefWidth="150.0" text="Nästa" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="50.0" />
+                    <Button mnemonicParsing="false" onAction="#backButtonPressed" prefHeight="60.0" prefWidth="160.0" styleClass="ImageButton" stylesheets="@style.css" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="20.0">
+                     <graphic>
+                        <StackPane prefHeight="150.0" prefWidth="200.0">
+                           <children>
+                              <ImageView fitHeight="71.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../resources/img/previousArrow.png" />
+                                 </image>
+                              </ImageView>
+                              <Label text="Tillbaka">
+                                 <font>
+                                    <Font size="36.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </StackPane>
+                     </graphic></Button>
+                    <Button fx:id="nextButton" mnemonicParsing="false" onAction="#nextButtonPressed" prefHeight="60.0" prefWidth="160.0" styleClass="ImageButton" stylesheets="@style.css" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="20.0">
+                     <graphic>
+                        <StackPane prefHeight="150.0" prefWidth="200.0">
+                           <children>
+                              <ImageView fitHeight="71.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../resources/img/NextArrow.png" />
+                                 </image>
+                              </ImageView>
+                              <Label text="Nästa">
+                                 <font>
+                                    <Font size="36.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </StackPane>
+                     </graphic></Button>
                </children>
             </AnchorPane>
          </bottom>
