--- a/src/layouts/account.fxml
+++ b/src/layouts/account.fxml
@@ -1,128 +1,172 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.PaymentController">
+<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="443.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.PaymentController">
     <children>
-        <BorderPane prefHeight="100.0" prefWidth="100.0" style="-fx-background-color: #CCCCCC;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-            <top>
-                <HBox alignment="CENTER" prefHeight="100.0" prefWidth="150.0" BorderPane.alignment="CENTER">
-                    <children>
-                        <Label alignment="TOP_CENTER" contentDisplay="CENTER" text="Mitt Konto" textAlignment="CENTER">
-                            <font>
-                                <Font size="32.0" />
-                            </font>
-                        </Label>
-                    </children>
-                    <BorderPane.margin>
-                    </BorderPane.margin>
-                </HBox>
-            </top>
+        <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="77.0" prefWidth="600.0" style="-fx-background-color: #CCCCCC;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <center>
+            <Label alignment="TOP_CENTER" contentDisplay="CENTER" text="Dina uppgifter" textAlignment="CENTER" BorderPane.alignment="CENTER">
+               <font>
+                  <Font size="32.0" />
+               </font>
+            </Label>
+         </center>
         </BorderPane>
-        <AnchorPane layoutX="219.0" layoutY="210.0" prefHeight="297.0" prefWidth="454.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="100.0">
+        <AnchorPane layoutX="219.0" layoutY="210.0" prefHeight="297.0" prefWidth="454.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="-50.0" AnchorPane.topAnchor="100.0">
          <children>
-            <Label layoutX="35.0" layoutY="14.0" text="Namn" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="15.0">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Label>
-            <Label layoutX="170.0" layoutY="171.0" text="Stad" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="150.0">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Label>
-            <Label layoutX="85.0" layoutY="115.0" text="Adress" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="105.0">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Label>
-            <Label layoutX="96.0" layoutY="127.0" text="Postnummer" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="60.0">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Label>
-            <Label layoutX="14.0" layoutY="272.0" text="Kortnummer" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="240.0">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Label>
-            <Label layoutX="14.0" layoutY="332.0" text="Giltligt till" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="330.0">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Label>
-            <Label layoutX="14.0" layoutY="302.0" text="CVC Kod" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="285.0">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Label>
-            <ComboBox layoutX="300.0" layoutY="339.0" prefHeight="40.0" prefWidth="110.0" AnchorPane.leftAnchor="165.0" AnchorPane.topAnchor="325.0" />
-            <ComboBox layoutX="439.0" layoutY="339.0" prefHeight="40.0" prefWidth="110.0" AnchorPane.leftAnchor="295.0" AnchorPane.topAnchor="325.0" />
-            <Label layoutX="209.0" layoutY="117.0" text="Kort Information:" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="200.0">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Label>
-            <TextField layoutX="165.0" layoutY="10.0" prefWidth="240.0" text="Mitt Namn" AnchorPane.leftAnchor="165.0" AnchorPane.topAnchor="10.0">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </TextField>
-            <TextField layoutX="350.0" layoutY="158.0" prefWidth="240.0" text="448 97" AnchorPane.leftAnchor="165.0" AnchorPane.topAnchor="55.0">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </TextField>
-            <TextField layoutX="209.0" layoutY="105.0" prefWidth="240.0" text="Gatan 180" AnchorPane.leftAnchor="165.0" AnchorPane.topAnchor="100.0">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </TextField>
-            <TextField layoutX="200.0" layoutY="181.0" prefWidth="240.0" text="Staden" AnchorPane.leftAnchor="165.0" AnchorPane.topAnchor="145.0">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </TextField>
-            <TextField layoutX="165.0" layoutY="234.0" prefWidth="60.0" text="****" AnchorPane.leftAnchor="165.0" AnchorPane.topAnchor="235.0">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </TextField>
-            <TextField layoutX="165.0" layoutY="279.0" prefWidth="240.0" text="***" AnchorPane.leftAnchor="165.0" AnchorPane.topAnchor="280.0">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </TextField>
-            <Label layoutX="251.0" layoutY="412.0" text="/" AnchorPane.leftAnchor="280.0" AnchorPane.topAnchor="325.0">
-               <font>
-                  <Font size="28.0" />
-               </font>
-            </Label>
-            <TextField layoutX="234.0" layoutY="235.0" prefWidth="60.0" text="****" AnchorPane.leftAnchor="225.0" AnchorPane.topAnchor="235.0">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </TextField>
-            <TextField layoutX="300.0" layoutY="235.0" prefWidth="60.0" text="****" AnchorPane.leftAnchor="285.0" AnchorPane.topAnchor="235.0">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </TextField>
-            <TextField layoutX="368.0" layoutY="235.0" prefWidth="60.0" text="*012" AnchorPane.leftAnchor="345.0" AnchorPane.topAnchor="235.0">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </TextField>
+            <GridPane prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="297.0" minWidth="0.0" prefWidth="226.5" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="421.0" minWidth="0.0" prefWidth="73.5" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="369.5" minWidth="10.0" prefWidth="30.5" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="369.5" minWidth="9.0" prefWidth="46.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="369.5" minWidth="10.0" prefWidth="67.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="369.5" minWidth="10.0" prefWidth="68.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="369.5" minWidth="10.0" prefWidth="122.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints maxHeight="244.0" minHeight="0.0" prefHeight="62.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="250.0" minHeight="0.0" prefHeight="89.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="250.0" minHeight="0.0" prefHeight="36.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="250.0" minHeight="0.0" prefHeight="50.5" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="250.0" minHeight="10.0" prefHeight="49.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="250.0" minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="250.0" minHeight="10.0" prefHeight="67.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Label alignment="CENTER_RIGHT" prefHeight="40.0" text="Namn:" GridPane.halignment="RIGHT" GridPane.valignment="CENTER">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                     <padding>
+                        <Insets right="5.0" />
+                     </padding>
+                  </Label>
+                  <Label alignment="CENTER_RIGHT" prefHeight="40.0" text="Adress:" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="TOP">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                     <padding>
+                        <Insets right="5.0" />
+                     </padding>
+                  </Label>
+                  <TextField prefHeight="40.0" prefWidth="240.0" promptText="För- och efternamn" GridPane.columnIndex="1" GridPane.columnSpan="5" GridPane.valignment="CENTER">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </TextField>
+                  <TextField prefWidth="240.0" promptText="Gatuadress" GridPane.columnIndex="1" GridPane.columnSpan="5" GridPane.rowIndex="1" GridPane.valignment="TOP">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </TextField>
+                  <TextField prefHeight="39.0" prefWidth="77.0" promptText="Postnr" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </TextField>
+                  <TextField prefHeight="39.0" prefWidth="133.0" promptText="Ort" GridPane.columnIndex="3" GridPane.columnSpan="3" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="BOTTOM" GridPane.vgrow="NEVER">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                     <GridPane.margin>
+                        <Insets left="3.0" />
+                     </GridPane.margin>
+                  </TextField>
+                  <TextField prefHeight="39.0" prefWidth="77.0" promptText="1234" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </TextField>
+                  <TextField prefHeight="39.0" prefWidth="77.0" promptText="1234" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="3">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </TextField>
+                  <TextField prefHeight="39.0" prefWidth="77.0" promptText="1234" GridPane.columnIndex="4" GridPane.rowIndex="3">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </TextField>
+                  <TextField prefHeight="39.0" prefWidth="77.0" promptText="1234" GridPane.columnIndex="5" GridPane.rowIndex="3">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </TextField>
+                  <Label alignment="CENTER_RIGHT" prefHeight="40.0" text="Kortnummer:" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                     <padding>
+                        <Insets right="5.0" />
+                     </padding>
+                  </Label>
+                  <TextField prefHeight="40.0" prefWidth="240.0" promptText="För- och efternamn" GridPane.columnIndex="1" GridPane.columnSpan="5" GridPane.rowIndex="4">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </TextField>
+                  <Label alignment="CENTER_RIGHT" prefHeight="40.0" text="Namn på kort:" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                     <padding>
+                        <Insets right="5.0" />
+                     </padding>
+                  </Label>
+                  <ComboBox maxWidth="1.7976931348623157E308" prefHeight="32.0" prefWidth="40.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                  <ComboBox maxWidth="1.7976931348623157E308" prefHeight="32.0" prefWidth="0.0" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="5" />
+                  <TextField prefHeight="39.0" prefWidth="77.0" promptText="1234" GridPane.columnIndex="5" GridPane.rowIndex="5">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </TextField>
+                  <Label alignment="CENTER_RIGHT" prefHeight="40.0" text="CVC:" GridPane.columnIndex="4" GridPane.halignment="RIGHT" GridPane.rowIndex="5">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                     <padding>
+                        <Insets right="5.0" />
+                     </padding>
+                  </Label>
+                  <Label alignment="CENTER_RIGHT" prefHeight="40.0" text="Giltigt t.o.m:" GridPane.halignment="RIGHT" GridPane.rowIndex="5">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                     <padding>
+                        <Insets right="5.0" />
+                     </padding>
+                  </Label>
+                  <ImageView fitHeight="75.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="3" GridPane.rowSpan="3" GridPane.valignment="CENTER">
+                     <image>
+                        <Image url="@../resources/img/payment.png" />
+                     </image>
+                  </ImageView>
+                  <Button mnemonicParsing="false" text="Ta bort konto" GridPane.rowIndex="6" GridPane.valignment="TOP">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Button>
+                  <ImageView fitHeight="75.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="LEFT" GridPane.rowSpan="2" GridPane.valignment="BASELINE">
+                     <image>
+                        <Image url="@../resources/img/delivery.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </GridPane>
          </children>
         </AnchorPane>
     </children>
